# managed-minecraft-server

./: main.tf  user_data.sh
agent/: Cargo.toml  README.md
agent/src/: main.rs  minecraft.rs
agent/src/minecraft/: client.rs  connection.rs  packet.rs  raw_json_text.rs  server.rs  status.rs
agent/src/minecraft/packet/: disconnect_login.rs  handshake.rs  ping.rs  status_request.rs  status_response.rs
minecraft-installer/: Cargo.toml
minecraft-installer/src/: download.rs  main.rs
