[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
integer-encoding = "4.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
