[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.3"
aws-sdk-ec2 = "1.53.0"
byteorder = "1.5.0"
dotenvy = "0.15.7"
integer-encoding = "4.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "full",
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
